    established after a failed flush would be committed
    as part of the subsequent transaction that 
    begins automatically after manual call 
    to rollback().   The state of the session is
    checked within rollback(), and if new state
    is present, a warning is emitted and 
    restore_snapshot() is called a second time,
    discarding those changes. [ticket:2389]

  - [feature] Added "class_registry" argument to
    declarative_base().  Allows two or more declarative
    bases to share the same registry of class names.

  - [feature] query.filter() accepts multiple 
    criteria which will join via AND, i.e.
    query.filter(x==y, z>q, ...)

  - [feature] Added new capability to relationship
    loader options to allow "default" loader strategies.
    Pass '*' to any of joinedload(), lazyload(),
    subqueryload(), or noload() and that becomes the
    loader strategy used for all relationships,
    except for those explicitly stated in the
    Query.  Thanks to up-and-coming contributor
    Kent Bower for an exhaustive and well 
    written test suite !  [ticket:2351]

  - [bug] Fixed bug whereby event.listen(SomeClass)
    forced an entirely unnecessary compile of the 
    mapper, making events very hard to set up
    at module import time (nobody noticed this ??)  
    [ticket:2367]

  - [bug] Fixed bug whereby hybrid_property didn't 
    work as a kw arg in any(), has().

  - Fixed regression from 0.6 whereby if 
    "load_on_pending" relationship() flag were used
    where a non-"get()" lazy clause needed to be 
    emitted on a pending object, it would fail 
    to load.

  - [bug] ensure pickleability of all ORM exceptions
    for multiprocessing compatibility. [ticket:2371]

  - [bug] implemented standard "can't set attribute" / 
    "can't delete attribute" AttributeError when 
    setattr/delattr used on a hybrid that doesn't 
    define fset or fdel. [ticket:2353]

- sql
  - [feature] Added "false()" and "true()" expression